--- a/assignments/module2-solution/CSS/datswagger.css
+++ b/assignments/module2-solution/CSS/datswagger.css
@@ -1,23 +1,54 @@
 /** base styling **/
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
-section {
-  position: relative;
-  border: 2px solid black;
-  background-color: #A52A2A;
-  margin-left: 10px;
-  padding-top: 30px;
-  font-family: Helvetica;
+header{
+  font-size: 175%;
   text-align: center;
+  font-weight: bold;
+  font-family: Arial;
+}
+h1, h2, h3{
+  border: 2px solid black;
+}
+section{
   color: white;
+  text-shadow: 1px 1px black;
+  position: relative;
+  margin: 5px;
+  border: 2px solid black;
+  padding: 10px;
+  padding-top: 40px;
+  text-align: center;
+  font-family: Arial;
 }
 
-title{
-  font-size: 24px;
-}
 
+/*class and id specifications for font,positioning, etc*/
+.sectionTitle{
+  color: black;
+  text-shadow: none;
+  position: absolute;
+  margin: 0px;
+  padding: 3px 0px 3px 0px;
+  width: 150px;
+  top: -2px;
+  right: -2px;
+  background-color: #84e1e1; 
+  font-size: 125%;
+  font-weight: bold;
+}
+#p1 {
+  background-color: #5c5c8a;
+}
+#p2 {
+  background-color: #7575a3;
+}
+#p3 {
+  background-color: #a3a3c2;
+}
 
 
 /* Simple Responsive Framework. */
@@ -25,22 +56,22 @@ title{
   width: 100%;
 }
 
+
 /********** Desktop **********/
 @media (min-width: 992px) {
   .col-lg-4{
     float: left;
-    /*border: 1px solid green;*/
   }
   .col-lg-4 {
     width: 33.33%;
   }
 }
 
+
 /********** Tablet **********/
-@media (min-width: 768px) and (max-width: 991pc) {
-  .col-md-6{
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-6, .col-md-12{
     float: left;
-    /*border: 1px solid green;*/
   }
   .col-md-6 {
     width: 50%;
@@ -48,28 +79,17 @@ title{
   .col-md-12 {
     width: 100%;
   }
+
 }
+
 
 /********** Mobile **********/
 @media (max-width: 767px) {
   .col-sm-12{
     float: left;
-    /*border: 1px solid green;*/
   }
   .col-sm-12 {
     width: 100%;
   }
 }
 
-section#sectionTitle {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  font-size: 20px;
-  background-color: #00FFFF;
-  width: 150px;
-  height: 30px;
-  position: absolute;
-  top: -2px;
-  right: -2px;
-  text-align: center;
-}
