--- a/assignments/module2-solution/CSS/datswagger.css
+++ b/assignments/module2-solution/CSS/datswagger.css
@@ -1,20 +1,26 @@
 /** base styling **/
 * {
   box-sizing: border-box;
+}
+
+body {
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica;
 }
+
 header{
   padding: 20px;
   font-size: 175%;
   text-align: center;
   font-weight: bold;
-  font-family: Arial;
 }
+
 h1, h2, h3{
   border: 1px solid black;
   text-align: center;
 }
+
 section{
   color: white;
   text-shadow: 1px 1px black;
@@ -24,7 +30,6 @@ section{
   padding: 10px;
   padding-top: 40px;
   text-align: left;
-  font-family: Arial;
 }
 
 
